[package]
name = "mess"
version = "0.0.1-placeholder"
edition = "2021"
authors = ["Bob <bob@standardinput.co>"]
description = "placeholder for a prototype message storage lib"
repository = "https://github.com/bobisme/mess"
homepage = "https://github.com/bobisme/mess"
documentation = "https://github.com/bobisme/mess"
readme = "README.md"
license = "WTFPL"

[features]
xtest = []
proptest = []

[workspace]
members = ["xtask"]

[lib]
name = "mess"

[dependencies]
chrono = "0.4.26"
ident = { git = "https://github.com/bobisme/ident" }
once_cell = "1.18.0"
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json"] }
serde = "1.0.175"
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["chrono", "macros", "sqlite"] }
thiserror = "1.0.44"
tracing = "0.1.37"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
criterion = { version = "0.5", features = ["async_std"] }
pretty_assertions = "1.4.0"
# lincheck = "0.1.1"
# loom = "0.6.1"
proptest = "1.2"
rstest = "0.18"
tracing-subscriber = { version = "^0.3.14", features = ["env-filter"] }
sqlx = { version = "0.7.1", features = [
  "chrono",
  "macros",
  "runtime-async-std",
  "sqlite",
] }

[[bench]]
name = "write_sqlite"
harness = false
