[package]
name = "mess"
version = "0.0.1-placeholder"
edition = "2021"
authors = ["Bob <bob@standardinput.co>"]
description = "placeholder for a prototype message storage lib"
repository = "https://github.com/bobisme/mess"
homepage = "https://github.com/bobisme/mess"
documentation = "https://github.com/bobisme/mess"
readme = "README.md"

[features]
xtest = []
proptest = []

[workspace]
members = ["mess_db", "xtask"]

[lib]
name = "mess"

[dependencies]
mess_db = { path = "mess_db" }

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
