[package]
name = "mess"
version = "0.0.1-placeholder"
edition = "2021"
authors = ["Bob <bob@standardinput.co>"]
description = "placeholder for a prototype message storage lib"
repository = "https://github.com/bobisme/mess"
homepage = "https://github.com/bobisme/mess"
documentation = "https://github.com/bobisme/mess"
readme = "README.md"

[features]
xtest = []
proptest = []

[workspace]
members = [".", "mess_ecs", "mess_db", "examples/social", "xtask"]

[lib]
name = "mess"

[dependencies]
mess_db = { workspace = true }
mess_ecs = { workspace = true }

[workspace.dependencies]
mess = { path = "." }
mess_db = { path = "mess_db" }
mess_ecs = { path = "mess_ecs" }
#
ident = { git = "https://github.com/bobisme/ident" }
konst = "0.3.6"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
quick_cache = "0.4.0"
thiserror = "1.0.44"
tokio = { version = "1.32", features = ["full"] }
# dev
assert2 = "0.3.11"
rstest = "0.18.2"
