[package]
name = "mess_db"
version = "0.1.0"
edition = "2021"

[features]
default = ["rocksdb"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]
rusqlite = ["dep:rusqlite"]
rocksdb = ["dep:rocksdb"]

[dependencies]
chrono = "0.4.26"
ident = { git = "https://github.com/bobisme/ident" }
once_cell = "1.18.0"
rusqlite = { version = "0.29.0", features = ["serde_json"], optional = true }
rocksdb = { version = "0.21", default_features = false, features = [
  "zstd",
], optional = true }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
# slotmap = "1.0.6"
sqlx = { version = "0.7.1", features = [
  "chrono",
  "macros",
  "runtime-async-std",
], optional = true }
thiserror = "1.0.44"
tokio = { workspace = true }
tracing = "0.1.37"
rkyv = { version = "0.7.42", features = ["archive_le", "validation"] }
postcard = "1.0.6"

[dev-dependencies]
assert2 = "0.3.11"
async-std = { version = "1.12", features = ["attributes"] }
criterion = { version = "0.5", features = ["async_tokio"] }
pretty_assertions = "1.4.0"
# lincheck = "0.1.1"
# loom = "0.6.1"
proptest = "1.2"
rstest = "0.18"
tracing-subscriber = { version = "^0.3.14", features = ["env-filter"] }
# sqlx = { version = "0.7.1", features = [
#   "chrono",
#   "macros",
#   "runtime-async-std",
#   "sqlite",
# ], optional = true }

[profile.dev.package.sqlx-macros]
opt-level = 3

[[bench]]
name = "write_sqlite_sqlx"
harness = false
required-features = ["sqlx-sqlite"]

[[bench]]
name = "write_sqlite_rusqlite"
harness = false
required-features = ["rusqlite"]

[[bench]]
name = "write_rocksdb"
harness = false
required-features = ["rocksdb"]
