[package]
name = "mess_db"
edition = "2021"
version = "0.1.0"

[dependencies]
chrono = "0.4.26"
once_cell = "1.18.0"
postcard = "1.0.6"
qed = "1.6.1"
serde_json = "1.0.103"
tracing = "0.1.37"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dependencies.crossbeam-queue]
version = "0.3.8"

[dependencies.ident]
features = []
workspace = true

[dependencies.rkyv]
version = "0.7.42"
features = ["archive_le", "validation"]

[dependencies.rocksdb]
version = "0.21"
features = ["zstd"]
optional = true

[dependencies.rusqlite]
version = "0.29.0"
features = ["serde_json"]
optional = true

[dependencies.serde]
version = "1.0.175"
features = ["derive"]

[dev-dependencies]
assert2 = "0.3.11"
pretty_assertions = "1.4.0"
proptest = "1.2"
rstest = "0.18"

[dev-dependencies.async-std]
version = "1.12"
features = ["attributes"]

[dev-dependencies.criterion]
version = "0.5"
features = ["async_tokio"]

[dev-dependencies.tracing-subscriber]
version = "^0.3.14"
features = ["env-filter"]

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb"]
rusqlite = ["dep:rusqlite"]

[[bench]]
name = "write_sqlite_rusqlite"
harness = false
required-features = ["rusqlite"]

[[bench]]
name = "write_rocksdb"
harness = false
required-features = ["rocksdb"]
