[package]
name = "mess_lsm"
version = "0.1.0"
edition = "2021"
workspace = "../"

[dependencies]
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true }
thiserror = { workspace = true }
zerovec = "0.10.0"
bincode = "1.3.3"

[dev-dependencies]
assert2 = { workspace = true }
fastrand = "2.0.1"
rstest = { workspace = true }
