[package]
name = "mess_lsm"
version = "0.1.0"
edition = "2021"
workspace = "../"

[dependencies]
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true }
thiserror = { workspace = true }
zerovec = "0.10.0"
bincode = "1.3.3"
lincheck = "0.2.1"
proptest = "1.3.1"
wyhash = "0.5.0"
parking_lot = "0.12"

[dev-dependencies]
assert2 = { workspace = true }
fastrand = "2.0.1"
futures = "0.3.28"
rstest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(loom)'.dependencies]
loom = "0.6"
[[bench]]
name = "bbpp"
harness = false
