[package]
name = "social"
version = "0.1.0"
edition = "2021"
workspace = "../../"

[dependencies]
mess = { workspace = true }
ident = { workspace = true, features = ["serde"] }
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
