[package]
name = "social"
version = "0.1.0"
edition = "2021"
workspace = "../../"

[dependencies]
mess = { workspace = true }
ident = { workspace = true, features = ["serde"] }
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
once_cell = "1.18.0"
bumpalo = { version = "3.14.0", features = ["boxed"] }
parking_lot.workspace = true
